--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^22.10.0",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
+    "esbuild": "^0.27.3",
     "eslint": "^8.57.0",
     "tsx": "^4.19.0",
     "typescript": "^5.7.0",
