--- a/package.json
+++ b/package.json
@@ -19,18 +19,18 @@
   },
   "dependencies": {
     "axe-core": "^4.8.4",
-    "better-sqlite3": "^11.7.0",
     "chalk": "^5.3.0",
     "cli-table3": "^0.6.5",
     "commander": "^12.1.0",
     "exceljs": "^4.4.0",
     "ora": "^8.1.1",
-    "playwright": "^1.49.0",
+    "puppeteer-core": "^24.37.3",
+    "sql.js": "^1.14.0",
     "yaml": "^2.6.0"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.12",
     "@types/node": "^22.10.0",
+    "@types/sql.js": "^1.4.9",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
     "esbuild": "^0.27.3",
